--- a/foodjardeliveryapp/src/main/res/layout/activity_my_old_orders.xml
+++ b/foodjardeliveryapp/src/main/res/layout/activity_my_old_orders.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBgGray"
-    tools:context="com.zeeshan.foodjaradmin.AllDeliveryBoys">
+
+    tools:context="com.zeeshan.foodjardeliveryapp.MyOldOrders">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -24,30 +25,15 @@
             android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:fontFamily="@font/aclonica"
-            android:text="@string/delivery_boys"
+            android:text="@string/my_recent_orders"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp" />
 
 
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/ed_Search"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/bg_search"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:queryHint="@string/search" />
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewDeliveryBoys"
+        android:id="@+id/recyclerViewOrders"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -59,12 +45,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_Search">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
     </androidx.recyclerview.widget.RecyclerView>
 
     <ProgressBar
-        android:id="@+id/progressBarDeliveryBoys"
+        android:id="@+id/progressBarOrder"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
