--- a/foodjardeliveryapp/src/main/res/values/colors.xml
+++ b/foodjardeliveryapp/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorTransparent">#00000000</color>
+
+    <color name="colorBgGray">#F5F5F5</color>
+    <color name="colorGray">#BDBDBD</color>
+
+    <color name="colorPrimaryDark">#2C0548</color>
+    <color name="colorPrimary">#55376D</color>
+    <color name="colorPrimaryLight">#7F6990</color>
+
 </resources>
