--- a/app/src/main/res/layout/activity_assigned_orders.xml
+++ b/app/src/main/res/layout/activity_assigned_orders.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBgGray"
 
-    tools:context="com.zeeshan.foodjardeliveryapp.MyOldOrders">
+    tools:context="com.zeeshan.foodjar.UserAssignedOrders">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -25,7 +25,7 @@
             android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:fontFamily="@font/aclonica"
-            android:text="@string/my_recent_orders"
+            android:text="@string/as"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp" />
 
