--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -28,7 +26,7 @@
             android:fontFamily="@font/aclonica"
             android:text="@string/item_details"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -90,7 +88,7 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/pizza"
                 android:textColor="@color/colorPrimary"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txtItemQuantityDetails" />
@@ -100,13 +98,13 @@
                 android:layout_width="120dp"
                 android:layout_height="30dp"
                 android:layout_marginEnd="16dp"
+                android:gravity="center"
                 android:layout_marginRight="16dp"
                 android:background="@drawable/bg_gradient"
-                app:finalNumber="9999"
-                app:initialNumber="1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/txtItemNameDetails"
-                app:textSize="12sp" />
+                app:layout_constraintBottom_toBottomOf="@id/txtItemNameDetails"
+                 />
 
             <TextView
                 android:id="@+id/txtItemCategoryDetails"
