--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBgGray"
-    tools:context="com.zeeshan.foodjar.OrderDetails">
+    tools:context="com.zeeshan.foodjar.UserOrderDetails">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -26,7 +26,7 @@
             android:fontFamily="@font/aclonica"
             android:text="@string/order_details"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -34,11 +34,11 @@
         android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintBottom_toTopOf="@+id/head7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,7 +128,6 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/username"
-                        android:textAllCaps="true"
                         android:textStyle="bold" />
 
                     <TextView
@@ -243,15 +242,21 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-
                     <TextView
-                        android:id="@+id/textView0"
+                        android:id="@+id/textView99"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-
                         android:layout_weight="1"
-                        android:gravity="start"
                         android:text="@string/shop_address"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView10"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="@string/referred_by"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -263,13 +268,20 @@
                     android:orientation="horizontal"
                     tools:layout_editor_absoluteX="32dp">
 
-
                     <TextView
                         android:id="@+id/txtShopAddress"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:text="@string/shop_125_alipur_plaza_basment_islambad" />
+                        android:layout_weight="1"
+                        android:text="@string/adan_foods_pvt_ltd" />
+
+                    <TextView
+                        android:id="@+id/txtRefferedBy"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="@string/pending" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -279,8 +291,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="@+id/head4"
-                app:layout_constraintStart_toStartOf="@+id/head4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/head4">
 
                 <include layout="@layout/table_head_orders" />
@@ -309,15 +321,60 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
     <LinearLayout
         android:id="@+id/head7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="8dp"
-        app:layout_constraintEnd_toEndOf="@id/scrollView"
-        app:layout_constraintStart_toStartOf="@id/scrollView"
-       app:layout_constraintTop_toBottomOf="@id/scrollView"
+        app:layout_constraintEnd_toEndOf="@id/head8"
+        app:layout_constraintStart_toStartOf="@id/head8"
+        app:layout_constraintBottom_toTopOf="@id/head8">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteX="32dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/aclonica"
+                android:gravity="end"
+                android:text="@string/vat"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtVAT"
+                android:layout_width="wrap_content"
+                android:layout_marginRight="16dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/aclonica"
+                android:gravity="center"
+                android:text="@string/rs_2_250"
+                android:textColor="@color/colorPrimary"
+                android:textSize="16sp"
+                android:layout_marginEnd="16dp" />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/head8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="@id/head7"
+        app:layout_constraintStart_toStartOf="@id/head7"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
@@ -335,7 +392,6 @@
                 android:fontFamily="@font/aclonica"
                 android:gravity="end"
                 android:text="@string/total_order_amount"
-
                 android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
                 android:textStyle="bold" />
@@ -344,7 +400,6 @@
                 android:id="@+id/txtTotalAmountOrder"
                 android:layout_width="wrap_content"
                 android:layout_marginRight="16dp"
-
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/aclonica"
                 android:gravity="center"
@@ -354,6 +409,8 @@
                 android:layout_marginEnd="16dp" />
 
         </LinearLayout>
+
+
     </LinearLayout>
 
 
