--- a/app/src/main/res/layout/activity_search_item.xml
+++ b/app/src/main/res/layout/activity_search_item.xml
@@ -31,7 +31,7 @@
                 android:fontFamily="@font/aclonica"
                 android:text="@string/app_name"
                 android:textColor="@color/colorPrimary"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
         </androidx.appcompat.widget.Toolbar>
@@ -43,6 +43,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:background="@drawable/bg_search"
@@ -52,15 +53,41 @@
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:queryHint="@string/search" />
 
-        <ImageView
-            android:id="@+id/imageViewOfferBanner"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/offerContainer"
+            android:layout_width="match_parent"
             android:layout_height="182dp"
-            android:scaleType="centerCrop"
+            android:orientation="vertical"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ed_Search" />
+            app:layout_constraintTop_toBottomOf="@+id/ed_Search">
 
+            <ImageView
+                android:id="@+id/imageViewOfferBanner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/txtOffer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/aclonica"
+                android:gravity="center"
+                android:lineSpacingMultiplier="2"
+                android:text="@string/_50_off_on_buying_10_items"
+                android:textColor="@color/colorPrimary"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@id/imageViewOfferBanner"
+                app:layout_constraintEnd_toEndOf="@id/imageViewOfferBanner"
+                app:layout_constraintStart_toStartOf="@id/imageViewOfferBanner"
+                app:layout_constraintTop_toTopOf="@id/imageViewOfferBanner" />
+
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -76,7 +103,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewOfferBanner">
+            app:layout_constraintTop_toBottomOf="@+id/offerContainer">
 
         </androidx.recyclerview.widget.RecyclerView>
 
