--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBgGray"
-
+    android:id="@+id/rootLayout"
     tools:context="com.zeeshan.foodjar.ShoppingCart">
 
     <androidx.appcompat.widget.Toolbar
@@ -19,8 +19,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -29,7 +27,7 @@
                 android:text="@string/cart"
                 android:layout_gravity="center"
                 android:textColor="@color/colorPrimary"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
 
     </androidx.appcompat.widget.Toolbar>
@@ -84,10 +82,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85" />
+        app:layout_constraintGuide_percent="0.75" />
 
     <TextView
-        android:id="@+id/txtTotalLabel"
+        android:id="@+id/txtVAT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
@@ -96,11 +94,43 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/aclonica"
+        android:text="@string/vat"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtTotalAmount"
+        app:layout_constraintEnd_toStartOf="@+id/txtTotalAmount"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txtTotalVAT"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:fontFamily="@font/aclonica"
+        android:text="@string/rs_2_250"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/txtVAT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txtVAT" />
+
+
+    <TextView
+        android:id="@+id/txtTotalLabel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/aclonica"
+        android:gravity="end"
         android:text="@string/total"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnPlaceOrder"
-        app:layout_constraintEnd_toStartOf="@+id/txtTotalAmount"
+        app:layout_constraintEnd_toEndOf="@+id/txtVAT"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -117,6 +147,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/txtTotalLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txtTotalLabel" />
+
+
 
     <ProgressBar
         android:id="@+id/progressBarCart"
