--- a/foodjaradmin/src/main/res/layout/activity_pending_orders.xml
+++ b/foodjaradmin/src/main/res/layout/activity_pending_orders.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBgGray"
 
-    tools:context="com.zeeshan.foodjaradmin.PendingOrders">
+    tools:context="com.zeeshan.foodjaradmin.AdminPendingOrders">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
