--- a/foodjaradmin/src/main/res/layout/row_table_item.xml
+++ b/foodjaradmin/src/main/res/layout/row_table_item.xml
@@ -12,14 +12,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="4">
+            android:weightSum="3.5">
 
             <TextView
                 android:id="@+id/txtItemNo"
@@ -34,22 +33,12 @@
                 android:id="@+id/txtItemName"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
+                android:layout_weight="1.25"
                 android:gravity="center"
                 android:text="@string/item_name"
                 android:textSize="12sp"
                 tools:ignore="RtlHardcoded" />
 
-            <TextView
-                android:id="@+id/txtItemQty"
-                android:layout_width="0dp"
-                android:layout_marginRight="15dp"
-                android:layout_weight="0.5"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/qty"
-                android:textSize="12sp"
-                tools:ignore="RtlHardcoded" />
             <TextView
                 android:id="@+id/txtItemUnit"
                 android:layout_width="0dp"
@@ -61,15 +50,35 @@
                 tools:ignore="RtlHardcoded" />
 
             <TextView
-                android:id="@+id/txtItemAmount"
+                android:id="@+id/txtItemQty"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginRight="15dp"
+                android:layout_weight="0.5"
                 android:gravity="center"
-                android:layout_weight="1"
-                android:text="@string/amount"
+                android:text="@string/qty"
                 android:textSize="12sp"
                 tools:ignore="RtlHardcoded" />
 
+            <TextView
+                android:id="@+id/txtItemPrice"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:gravity="center"
+                android:text="@string/price"
+                android:textSize="12sp"
+                tools:ignore="RtlHardcoded" />
+
+            <TextView
+                android:id="@+id/txtItemAmount"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.75"
+                android:gravity="center"
+                android:text="@string/amount"
+                android:textSize="12sp"
+                tools:ignore="RtlHardcoded" />
 
         </LinearLayout>
 
