--- a/foodjaradmin/src/main/res/layout/table_head_orders.xml
+++ b/foodjaradmin/src/main/res/layout/table_head_orders.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="4">
+            android:weightSum="3.5">
 
             <TextView
                 android:layout_width="15dp"
@@ -34,12 +34,23 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
+                android:layout_weight="1.25"
                 android:fontFamily="@font/aclonica"
                 android:gravity="center"
                 android:text="@string/item_name"
                 android:textColor="@color/colorPrimary"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                tools:ignore="RtlHardcoded" />
 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:fontFamily="@font/aclonica"
+                android:gravity="center"
+                android:text="@string/unit"
+                android:textColor="@color/colorPrimary"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 tools:ignore="RtlHardcoded" />
@@ -49,7 +60,6 @@
                 android:layout_height="match_parent"
                 android:layout_marginRight="15dp"
                 android:layout_weight="0.5"
-
                 android:fontFamily="@font/aclonica"
                 android:gravity="center"
                 android:text="@string/qty"
@@ -64,9 +74,8 @@
                 android:layout_weight="0.5"
                 android:fontFamily="@font/aclonica"
                 android:gravity="center"
-                android:text="@string/unit"
+                android:text="@string/price"
                 android:textColor="@color/colorPrimary"
-
                 android:textSize="12sp"
                 android:textStyle="bold"
                 tools:ignore="RtlHardcoded" />
@@ -74,10 +83,9 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="0.75"
                 android:fontFamily="@font/aclonica"
                 android:gravity="center"
-
                 android:text="@string/amount"
                 android:textColor="@color/colorPrimary"
                 android:textSize="12sp"
