--- a/foodjardeliveryapp/src/main/res/layout/activity_delivered_orders.xml
+++ b/foodjardeliveryapp/src/main/res/layout/activity_delivered_orders.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBgGray"
 
-    tools:context="com.zeeshan.foodjar.OrderHistory">
+    tools:context="com.zeeshan.foodjardeliveryapp.DeliveryAppDeliveredOrders">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -25,9 +25,9 @@
             android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:fontFamily="@font/aclonica"
-            android:text="@string/order_history"
+            android:text="@string/delivered_orders"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
 
     </androidx.appcompat.widget.Toolbar>
