--- a/foodjardeliveryapp/src/main/res/layout/activity_order_details.xml
+++ b/foodjardeliveryapp/src/main/res/layout/activity_order_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBgGray"
-    tools:context="com.zeeshan.foodjardeliveryapp.OrderDetails">
+    tools:context="com.zeeshan.foodjardeliveryapp.DeliveryAppOrderDetails">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -26,19 +26,19 @@
             android:fontFamily="@font/aclonica"
             android:text="@string/order_details"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/head7"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/head8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
@@ -76,7 +76,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="end"
-                        android:text="DATE"
+                        android:text="@string/date"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -238,15 +238,21 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-
                     <TextView
-                        android:id="@+id/textView0"
+                        android:id="@+id/textView99"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-
                         android:layout_weight="1"
-                        android:gravity="start"
                         android:text="@string/shop_address"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView19"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="@string/referred_by"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -258,13 +264,20 @@
                     android:orientation="horizontal"
                     tools:layout_editor_absoluteX="32dp">
 
-
                     <TextView
                         android:id="@+id/txtShopAddress"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:text="@string/shop_125" />
+                        android:layout_weight="1"
+                        android:text="@string/adan_foods_pvt_ltd" />
+
+                    <TextView
+                        android:id="@+id/txtReferredBy"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="@string/pending" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -288,31 +301,75 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="@id/mainContainer"
                 app:layout_constraintEnd_toEndOf="@+id/head5"
                 app:layout_constraintStart_toStartOf="@+id/head5"
-                app:layout_constraintTop_toBottomOf="@+id/head5"
-                app:layout_constraintBottom_toBottomOf="@id/mainContainer">
+                app:layout_constraintTop_toBottomOf="@+id/head5">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerViewOrderItems"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    />
+                    android:layout_height="match_parent" />
 
             </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/head8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/head7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteX="32dp">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/aclonica"
+                android:gravity="end"
+                android:text="@string/_5_vat"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtTotalVAT"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:fontFamily="@font/aclonica"
+                android:gravity="center"
+                android:text="@string/rs_2_250"
+                android:textColor="@color/colorPrimary"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+    </LinearLayout>
+
     <LinearLayout
         android:id="@+id/head7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnMark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/btnMark">
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -336,18 +393,20 @@
             <TextView
                 android:id="@+id/txtTotalAmountOrder"
                 android:layout_width="wrap_content"
-                android:layout_marginRight="16dp"
-
                 android:layout_height="wrap_content"
+
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:fontFamily="@font/aclonica"
                 android:gravity="center"
                 android:text="@string/rs_2_250"
                 android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
-                android:layout_marginEnd="16dp" />
+                android:textSize="16sp" />
 
         </LinearLayout>
     </LinearLayout>
+
+
     <Button
         android:id="@+id/btnMark"
         android:layout_width="0dp"
