--- a/foodjardeliveryapp/src/main/res/layout/activity_pending_orders.xml
+++ b/foodjardeliveryapp/src/main/res/layout/activity_pending_orders.xml
@@ -6,13 +6,12 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBgGray"
-        tools:context="com.zeeshan.foodjardeliveryapp.MyOrders">
+        tools:context="com.zeeshan.foodjardeliveryapp.DeliveryAppPendingOrders">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -31,9 +30,9 @@
                 android:layout_centerInParent="true"
                 android:layout_gravity="center"
                 android:fontFamily="@font/aclonica"
-                android:text="@string/my_orders"
+                android:text="@string/pending_orders"
                 android:textColor="@color/colorPrimary"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
 
         </androidx.appcompat.widget.Toolbar>
