--- a/foodjardeliveryapp/src/main/res/menu/menu_delivery_app.xml
+++ b/foodjardeliveryapp/src/main/res/menu/menu_delivery_app.xml
@@ -3,9 +3,17 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/recentOrders"
-            android:title="@string/my_recent_orders"
+            android:id="@+id/pendingOrders"
+            android:title="@string/pending_orders"
             android:icon="@drawable/ic_history_black_24dp"/>
+        <item
+            android:id="@+id/deliveredOrders"
+            android:title="@string/delivered_orders"
+            android:icon="@drawable/ic_history_black_24dp"/>
+        <item
+            android:id="@+id/deleteAccount"
+            android:title="@string/delete_account"
+            android:icon="@drawable/ic_delete_forever_black_24dp"/>
         <item
             android:id="@+id/logout"
             android:title="@string/log_out"
